# egui-theme-switch

./: .gitignore  Cargo.toml  changelog.md  deny.toml  index.html  readme.md
.github/workflows/: ci.yml  demo.yml
demo/: Cargo.toml  index.html
demo/src/: auto_viewport_theme.rs  linux_system_theme.rs  main.rs
doc/: preview.md  update-rustdoc.py
src/: arc.rs  cogwheel.rs  context_ext.rs  lib.rs  moon.rs  rotated_rect.rs  sun.rs
