[package]
name = "egui-theme-switch"
version = "0.1.1"
edition = "2021"
rust-version = "1.79.0"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/bash/egui-theme-switch"
description = "A pretty theme switch for your egui app"
keywords = ["egui", "widget", "dark-light", "switch"]
categories = ["gui"]
exclude = [".github", "doc/*.py", "deny.toml"]

[dependencies]
egui.workspace = true

[workspace]
members = ["demo"]

[workspace.dependencies]
egui = { git = "https://github.com/emilk/egui", default-features = false }
eframe = { git = "https://github.com/emilk/egui", features = ["persistence"] }
