[package]
name = "egui-theme-switch"
version = "0.2.1"
edition = "2021"
rust-version = "1.79.0"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/bash/egui-theme-switch"
description = "A pretty theme switch for your egui app"
keywords = ["egui", "widget", "dark-light", "switch"]
categories = ["gui"]
exclude = [".github", "doc/*.py", "doc/*.png", "deny.toml"]

[dependencies]
egui.workspace = true

[workspace]
members = ["demo"]

[workspace.dependencies]
egui = { version = "0.29.0", default-features = false }
eframe = { version = "0.29.0", features = ["persistence"] }
