[package]
name = "egui-theme-switch-demo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
eframe.workspace = true
egui.workspace = true
egui-theme-switch = { path = ".." }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.4"
